<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionNastaveniOznameni"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nastaveni_oznameni"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/vice_moznosti"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/actionSpravovat"
                android:title="@string/spravovat_ukoly"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
